--- a/dapp/package.json
+++ b/dapp/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.51.11",
