--- a/dapp/package.json
+++ b/dapp/package.json
@@ -16,9 +16,11 @@
     "@tanstack/react-query": "^5.51.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "doly-icons": "^1.5.4",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.452.0",
     "next": "^14.2.9",
+    "rc-slider-captcha": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.3",
