--- a/dapp/package.json
+++ b/dapp/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.51.11",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "doly-icons": "^1.5.4",
